@@ -1,13 +1,15 @@
 package org.jzy3d.painters;
 
-import static jdk.incubator.foreign.CLinker.C_DOUBLE;
-import static jdk.incubator.foreign.CLinker.C_FLOAT;
-import static jdk.incubator.foreign.CLinker.C_INT;
+import static opengl.macos.v10_15_7.glut_h.C_INT;
 import java.awt.Component;
 import java.awt.FontMetrics;
 import java.awt.Graphics;
 import java.awt.event.InputEvent;
 import java.awt.event.MouseEvent;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.SegmentAllocator;
+import java.lang.foreign.ValueLayout;
 import java.nio.Buffer;
 import java.nio.ByteBuffer;
 import java.nio.FloatBuffer;
@@ -30,27 +32,24 @@ import org.jzy3d.plot3d.rendering.canvas.Quality;
 import org.jzy3d.plot3d.rendering.lights.Attenuation;
 import org.jzy3d.plot3d.rendering.lights.LightModel;
 import org.jzy3d.plot3d.rendering.lights.MaterialProperty;
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.SegmentAllocator;
-import opengl.macos.v11_4.glutDisplayFunc$func;
-import opengl.macos.v11_4.glutIdleFunc$func;
-import opengl.macos.v11_4.glutMotionFunc$func;
-import opengl.macos.v11_4.glutMouseFunc$func;
-import opengl.macos.v11_4.glutReshapeFunc$func;
-import opengl.macos.v11_4.glut_h;
+import opengl.macos.v10_15_7.glutReshapeFunc$func;
+import opengl.macos.v10_15_7.glutIdleFunc$func;
+
+import opengl.macos.v10_15_7.glutDisplayFunc$func;
+import opengl.macos.v10_15_7.glutMotionFunc$func;
+import opengl.macos.v10_15_7.glutMouseFunc$func;
+import opengl.macos.v10_15_7.glut_h;
 
 public class PanamaGLPainter_MacOS_11_4 extends AbstractPainter implements PanamaGLPainter{
   static Logger logger = Logger.getLogger(PanamaGLPainter_MacOS_11_4.class);
 
-  ResourceScope scope;
+  MemorySession scope;
   SegmentAllocator allocator;
 
   public PanamaGLPainter_MacOS_11_4() {
     try {
-      scope = ResourceScope.newConfinedScope();
-      allocator = SegmentAllocator.ofScope(scope);
+      scope = MemorySession.openConfined();
+      allocator = SegmentAllocator.newNativeArena(scope);
     } catch (Exception e) {
       e.printStackTrace();
       System.err.println(e);
@@ -59,7 +58,7 @@ public class PanamaGLPainter_MacOS_11_4 extends AbstractPainter implements Panam
   
   /////////////////////////////////////////////
   
-  public ResourceScope getScope() {
+  public MemorySession getScope() {
     return scope;
   }
 
@@ -68,23 +67,23 @@ public class PanamaGLPainter_MacOS_11_4 extends AbstractPainter implements Panam
   }
 
   public MemorySegment alloc(double[] value) {
-    return allocator.allocateArray(C_DOUBLE, value);
+    return allocator.allocateArray(ValueLayout.JAVA_DOUBLE, value);
   }
 
   public MemorySegment alloc(float[] value) {
-    return allocator.allocateArray(C_FLOAT, value);
+    return allocator.allocateArray(ValueLayout.JAVA_FLOAT, value);
   }
 
   public MemorySegment alloc(int[] value) {
-    return allocator.allocateArray(C_INT, value);
+    return allocator.allocateArray(ValueLayout.JAVA_INT, value);
   }
 
   public MemorySegment alloc(String value) {
-    return CLinker.toCString(value, scope);
+    return allocator.allocateUtf8String(value);
   }
 
   public String glGetString(int stringID){
-    return CLinker.toJavaString(glut_h.glGetString(stringID));
+    return glut_h.glGetString(stringID).getUtf8String(0);
   }
 
   /////////////////////////////////////////////
@@ -95,13 +94,13 @@ public class PanamaGLPainter_MacOS_11_4 extends AbstractPainter implements Panam
     var renderer = canvas.getRenderer();
     var scope = painter.getScope();
     var allocator = painter.getAllocator();
-    var argc = allocator.allocate(C_INT, 0);
+    var argc = allocator.allocate(ValueLayout.JAVA_INT, 0);
 
     // GLUT Init window
     glut_h.glutInit(argc, argc);
     glut_h.glutInitDisplayMode(glut_h.GLUT_DOUBLE() | glut_h.GLUT_RGB() | glut_h.GLUT_DEPTH());
     glut_h.glutInitWindowSize(bounds.width, bounds.height);
-    glut_h.glutCreateWindow(CLinker.toCString(title + "/" + message, scope));
+    glut_h.glutCreateWindow(alloc(title + "/" + message));
 
     // GLUT Display/Idle callback
     glut_h.glutDisplayFunc(glutDisplayFunc$func.allocate(renderer::display, scope));
